--- a/ContainerVervoer/ContainerTransport.csproj
+++ b/ContainerVervoer/ContainerTransport.csproj
@@ -48,19 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExceptionHandler.cs" />
-    <Compile Include="Models\Container.cs" />
     <Compile Include="FmContainer.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FmContainer.Designer.cs">
       <DependentUpon>FmContainer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Logic.cs" />
-    <Compile Include="Models\Selection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Ship.cs" />
     <EmbeddedResource Include="FmContainer.resx">
       <DependentUpon>FmContainer.cs</DependentUpon>
     </EmbeddedResource>
@@ -89,6 +84,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContainerTransport.Logic\ContainerTransport.Logic.csproj">
+      <Project>{86cc35e0-2948-44f6-9ab9-bb537cfca84f}</Project>
+      <Name>ContainerTransport.Logic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ContainerTransport.Models\ContainerTransport.Models.csproj">
+      <Project>{346147f7-82be-491e-9893-d6e73434585a}</Project>
+      <Name>ContainerTransport.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
